# GPAI

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.github/workflows/: ci-go.yml  ci-proto-breaking.yml  ci-proto.yml  ci-rust.yml  ci-web.yml
apps/gateway/: Dockerfile  go.mod
apps/gateway/cmd/gateway/: main.go
apps/gateway/internal/config/: config.go
apps/gateway/internal/grpcclient/: market.go
apps/gateway/internal/handler/: quote.go  quote_test.go
apps/gateway/internal/server/: server.go
apps/web/: Dockerfile  next.config.ts  package.json  tsconfig.json  vitest.config.ts
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/_components/: MarketCard.tsx  PriceCard.tsx
apps/web/src/app/markets/[instrument]/: error.tsx  loading.tsx  not-found.tsx  page.test.tsx  page.tsx
apps/web/src/lib/: env.ts
apps/web/src/trpc/: server.ts
apps/web/src/trpc/routers/: market.ts
db/: .env.example
db/migrations/: 0001_init.sql  0002_seed.sql
db/schemas/: hypertable.sql  tables.sql
deploy/: .env.dev.example  README.md  docker-compose.dev.yml  docker-compose.yml  install.sh
deploy/saas/: README.md
docs/adr/: 0001-modular-monolith.md  0002-protobuf-grpc.md  0003-turborepo-pnpm.md  0004-rust-core.md  0005-timescaledb-redis-postgres.md
docs/architecture/: overview.md
docs/superpowers/plans/: 2026-06-22-gpai-stock-platform-skeleton.md
docs/superpowers/specs/: 2026-06-22-gpai-stock-platform-skeleton-design.md  2026-06-22-skeleton-dod-checklist.md
proto/: buf.gen.go.yaml  buf.gen.ts.yaml  buf.gen.yaml
proto/gpai/common/v1/: errors.proto  pagination.proto  types.proto
proto/gpai/ingestion/v1/: ingestion_service.proto  job.proto
proto/gpai/instrument/v1/: instrument.proto  instrument_service.proto
proto/gpai/market/v1/: calendar.proto  market_data_service.proto  ohlcv.proto  quote.proto
proto/gpai/portfolio/v1/: portfolio_service.proto  position.proto  transaction.proto
scripts/: check-proto-consistency.sh  db-migrate.sh  db-seed.sh  dev-down.sh  dev-up.sh  gen-proto.sh
services/core/: Dockerfile
services/core/crates/core-analysis/: Cargo.toml
services/core/crates/core-common/: Cargo.toml
services/core/crates/core-common/src/: config.rs  error.rs  lib.rs  registry.rs
services/core/crates/core-common/tests/: registry_test.rs
services/core/crates/core-ingestor/: Cargo.toml
services/core/crates/core-ingestor/src/: lib.rs  main.rs
services/core/crates/core-ingestor/tests/: loop_test.rs
services/core/crates/core-market/: Cargo.toml
services/core/crates/core-market/src/: lib.rs  repo.rs  service.rs  types.rs
services/core/crates/core-market/src/source/: mock.rs  mod.rs  yahoo.rs
services/core/crates/core-market/tests/: repo_test.rs  source_mock_test.rs  source_yahoo_test.rs
services/core/crates/core-portfolio/: Cargo.toml
services/core/crates/core-portfolio/src/: lib.rs
services/core/crates/proto-gen/: Cargo.toml  build.rs
services/core/crates/proto-gen/src/: lib.rs
