[workspace]
resolver = "2"
members = [
  "services/core/crates/core-analysis",
  "services/core/crates/core-common",
  "services/core/crates/core-market",
  "services/core/crates/core-portfolio",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "Proprietary"

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono", "json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
