[package]
name = "gpai-core-market"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
gpai-core-common = { path = "../core-common" }
async-trait.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
serde.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }